--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <div class="home container homeParent">
       <div class="homeContentMain text-center">
-        <!-- <h1 class='title'>Hej der !</h1>
-        <p class='homeParagraph'>
+        <h1 class='title'>Hej der !</h1>
+        <!-- <p class='homeParagraph'>
           Sørg venligst for at dele dit navn, før vi begynder. Du kan også dele en e-mailadresse for yderligere opdateringer.
         </p> -->
         <form class='homeForm ' id="userForm">
